fix: copy button z-index

--- a/plugins/copy-snippet/styles.css
+++ b/plugins/copy-snippet/styles.css
@@ -13,7 +13,6 @@
   right: 1rem;
   margin-bottom: -31px;
   text-align: right;
-  z-index: 50;
   margin-left: auto;
   font-size: 0.75rem;
 }
